--- a/relacion1/relacion1.html
+++ b/relacion1/relacion1.html
@@ -54,7 +54,7 @@
           <a href="./17relacion1.php" target="_blank"> Euclides Algoritmo</a>
         </li>
         <li><a href="./18relacion1.php" target="_blank"> MCM EUCLIDES</a></li>
-        <li><a href="./19relacion1.php" target="_blank"> Numero primo</a></li>
+        <li><a href="./19relacion1.php" target="_blank"> Numero bin</a></li>
         <li><a href="./20relacion1.php" target="_blank"> Numero primo</a></li>
       </ol>
     </div>
