--- a/relacion2/index.html
+++ b/relacion2/index.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relacion de ejercicios 2</title>
-</head>
-<body>
-    <h1>Relacion de ejercicios 2</h1>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ejercicios Relacion 1</title>
+    <link rel="shortcut icon" href="./logoPlayamar.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body class="bg-info-subtle">
+    <div class="container p-3 px-4 my-3 bg-white shadow-lg">
+      <h1 class="text-danger border border-danger py-3 px-5">
+        Relacion de ejercicios nº2
+      </h1>
+      <ol >
+        <li>
+          <a href="./1relacion2.php" target="_blank"> Calculadora en PHP</a>
+        </li>
+        <li><a href="./4relacion2.php" target="_blank" class="text-decoration-none">Estilos con clases de Bootstrap 5</a></li>
+        <li><a href="./5relacion2.php" target="_blank"> Tabla con estilos BS</a></li>
+        <li><a href="./6relacion2.php" target="_blank"> Listado personas con BS</a></li>
+        <li><a href="./7relacion2.php" target="_blank"> Calculadora PHP con BS</a></li>
+        <li><a href="./8relacion2.php" target="_blank"> Calculadora PHP con BS</a></li>
+        <li><a href="./9relacion2.php" target="_blank"> Tipo triangulo</a></li>
+        <li><a href="./10relacion2.php" target="_blank"> Raices 2 grado</a></li>
+        <li>
+          <a href="./11relacion2.php" target="_blank"> Raices de 2 grado mejorada</a>
+        </li>
+        <li>
+          <a href="./12relacion2.php" target="_blank"> Programa nota numerica</a>
+        </li>
+        <li>
+          <a href="./13relacion2.php" target="_blank"> Factorial numero natural</a>
+        </li>
+        <li>
+          <a href="./14relacion1.php" target="_blank"> Suma de n numeros</a>
+        </li>
+        <li><a href="./15relacion1.php" target="_blank"> Numero primo</a></li>
+        <li>
+          <a href="./16relacion1.php" target="_blank"> Divisores de numero entero</a>
+        </li>
+        <li>
+          <a href="./17relacion1.php" target="_blank"> Euclides Algoritmo</a>
+        </li>
+        <li><a href="./18relacion1.php" target="_blank"> MCM EUCLIDES</a></li>
+        <li><a href="./19relacion1.php" target="_blank"> Numero bin</a></li>
+        <li><a href="./20relacion1.php" target="_blank"> Numero primo</a></li>
+      </ol>
+    </div>
+  </body>
 </html>
