--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todos los ejercicios de PHP</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    
-</body>
+</head>
+<body class="bg-secondary-subtle">
+    <div class="card shadow w-50 mx-auto mt-4 pb-4">
+    <h3 class="card-title meta mt-4 text-center">Relaciones PHP - Felipe Gonzalez Marbouh</h3>
+    <nav class="mt-1">
+  <ul class="nav flex-column align-items-center">
+    <li class="nav-item mb-1">
+      <a class="btn btn-primary w-100" href="./relacion1/index.html">Relación 1</a>
+    </li>
+    <li class="nav-item mb-1">
+      <a class="btn btn-primary w-100" href="./relacion2/index.html">Relación 2</a>
+    </li>
+
+    <li class="nav-item mb-1">
+      <a class="btn btn-primary w-100" href="./relacion2/index.html">Relación 3</a>
+    </li>
+    <li class="nav-item mb-1">
+      <a class="btn btn-primary w-100" href="./relacion2/index.html">Relación 4</a>
+    </li>
+  </ul>
+</nav>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body> 
 </html>
