--- a/relacion2/index.html
+++ b/relacion2/index.html
@@ -1,56 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicios Relacion 1</title>
-    <link rel="shortcut icon" href="./logoPlayamar.png" type="image/x-icon" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body class="bg-info-subtle">
-    <div class="container p-3 px-4 my-3 bg-white shadow-lg">
-      <h1 class="text-danger border border-danger py-3 px-5">
-        Relacion de ejercicios nº2
-      </h1>
-      <ol >
-        <li>
-          <a href="./1relacion2.php" target="_blank"> Calculadora en PHP</a>
-        </li>
-        <li><a href="./4relacion2.php" target="_blank" class="text-decoration-none">Estilos con clases de Bootstrap 5</a></li>
-        <li><a href="./5relacion2.php" target="_blank"> Tabla con estilos BS</a></li>
-        <li><a href="./6relacion2.php" target="_blank"> Listado personas con BS</a></li>
-        <li><a href="./7relacion2.php" target="_blank"> Calculadora PHP con BS</a></li>
-        <li><a href="./8relacion2.php" target="_blank"> Calculadora PHP con BS</a></li>
-        <li><a href="./9relacion2.php" target="_blank"> Tipo triangulo</a></li>
-        <li><a href="./10relacion2.php" target="_blank"> Raices 2 grado</a></li>
-        <li>
-          <a href="./11relacion2.php" target="_blank"> Raices de 2 grado mejorada</a>
-        </li>
-        <li>
-          <a href="./12relacion2.php" target="_blank"> Programa nota numerica</a>
-        </li>
-        <li>
-          <a href="./13relacion2.php" target="_blank"> Factorial numero natural</a>
-        </li>
-        <li>
-          <a href="./14relacion1.php" target="_blank"> Suma de n numeros</a>
-        </li>
-        <li><a href="./15relacion1.php" target="_blank"> Numero primo</a></li>
-        <li>
-          <a href="./16relacion1.php" target="_blank"> Divisores de numero entero</a>
-        </li>
-        <li>
-          <a href="./17relacion1.php" target="_blank"> Euclides Algoritmo</a>
-        </li>
-        <li><a href="./18relacion1.php" target="_blank"> MCM EUCLIDES</a></li>
-        <li><a href="./19relacion1.php" target="_blank"> Numero bin</a></li>
-        <li><a href="./20relacion1.php" target="_blank"> Numero primo</a></li>
-      </ol>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ejercicios Relación 2</title>
+  <link rel="shortcut icon" href="./logoPlayamar.png" type="image/x-icon" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+    crossorigin="anonymous"
+  />
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    .full-height {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .card {
+      width: 100%;
+      max-width: 900px;
+    }
+    .list-group-item a {
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body class="bg-info-subtle">
+  <div class="container-fluid full-height">
+    <div class="card shadow-lg mx-auto">
+      <div class="card-header bg-danger text-white text-center">
+        <h1 class="mb-0">Relación de ejercicios Nº2</h1>
+      </div>
+      <div class="card-body">
+        <p class="lead">Ejercicios prácticos con PHP y Bootstrap:</p>
+        <div class="row">
+          <div class="col-md-6">
+            <ul class="list-group list-group-flush text-center">
+              <li class="list-group-item"><a href="./1relacion2.php" target="_blank">Calculadora en PHP</a></li>
+              <li class="list-group-item"><a href="./4relacion2.php" target="_blank">Estilos con clases de Bootstrap 5</a></li>
+              <li class="list-group-item"><a href="./5relacion2.php" target="_blank">Tabla con estilos BS</a></li>
+              <li class="list-group-item"><a href="./6relacion2.php" target="_blank">Listado personas con BS</a></li>
+              <li class="list-group-item"><a href="./7relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
+              <li class="list-group-item"><a href="./8relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
+              <li class="list-group-item"><a href="./9relacion2.php" target="_blank">Calculadora con validacion</a></li>
+              <li class="list-group-item"><a href="./10relacion2.php" target="_blank">Calculadora varios archivos</a></li>
+              <li class="list-group-item"><a href="./11relacion2.php" target="_blank">Ej 7 Rel 1 - Formateo Boostrap</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list-group list-group-flush text-center">
+              <li class="list-group-item"><a href="./12relacion2.php" target="_blank">Programa nota rubrica</a></li>
+              <li class="list-group-item"><a href="./13relacion2.php" target="_blank">Ej 8 Rel 1 JS</a></li>
+              <li class="list-group-item"><a href="./14relacion1.php" target="_blank">Nota con range</a></li>
+              <li class="list-group-item"><a href="./15relacion1.php" target="_blank">Ej 13 Rel 1</a></li>
+              <li class="list-group-item"><a href="./16relacion1.php" target="_blank">Divisores de número entero</a></li>
+              <li class="list-group-item"><a href="./17relacion1.php" target="_blank">Algoritmo de Euclides</a></li>
+              <li class="list-group-item"><a href="./18relacion1.php" target="_blank">MCM con Euclides</a></li>
+              <li class="list-group-item"><a href="./19relacion1.php" target="_blank">Conversión a binario</a></li>
+              <li class="list-group-item"><a href="./20relacion1.php" target="_blank">Número primo (versión 2)</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="card-footer text-center text-muted">
+        <small>Desarrollado por Felipe Gonzalez Marbouh &copy; 2025</small>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
