--- a/relacion1/index.html
+++ b/relacion1/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="card-footer text-center text-muted">
-        <small>Desarrollado por [Tu Nombre o Centro] &copy; 2025</small>
+        <small>Desarrollado por Felipe Gonzalez &copy; 2025</small>
       </div>
     </div>
   </div>
