--- a/relacion2/index.html
+++ b/relacion2/index.html
@@ -57,13 +57,13 @@
             <ul class="list-group list-group-flush text-center">
               <li class="list-group-item"><a href="./12relacion2.php" target="_blank">Programa nota rubrica</a></li>
               <li class="list-group-item"><a href="./13relacion2.php" target="_blank">Ej 8 Rel 1 JS</a></li>
-              <li class="list-group-item"><a href="./14relacion1.php" target="_blank">Nota con range</a></li>
-              <li class="list-group-item"><a href="./15relacion1.php" target="_blank">Ej 13 Rel 1</a></li>
-              <li class="list-group-item"><a href="./16relacion1.php" target="_blank">Divisores de número entero</a></li>
-              <li class="list-group-item"><a href="./17relacion1.php" target="_blank">Algoritmo de Euclides</a></li>
-              <li class="list-group-item"><a href="./18relacion1.php" target="_blank">MCM con Euclides</a></li>
-              <li class="list-group-item"><a href="./19relacion1.php" target="_blank">Conversión a binario</a></li>
-              <li class="list-group-item"><a href="./20relacion1.php" target="_blank">Número primo (versión 2)</a></li>
+              <li class="list-group-item"><a href="./14relacion2.php" target="_blank">Nota con range</a></li>
+              <li class="list-group-item"><a href="./15relacion2.php" target="_blank">Ej 13 Rel 1</a></li>
+              <li class="list-group-item"><a href="./16relacion2.php" target="_blank">Divisores de número entero</a></li>
+              <li class="list-group-item"><a href="./17relacion2.php" target="_blank">Cociente y resto</a></li>
+              <li class="list-group-item"><a href="./18relacion2.php" target="_blank">MCM con Euclides</a></li>
+              <li class="list-group-item"><a href="./19relacion2.php" target="_blank">Conversión a binario</a></li>
+              <li class="list-group-item"><a href="./20relacion2.php" target="_blank">Número primo (versión 2)</a></li>
             </ul>
           </div>
         </div>
