--- a/relacion2/index.html
+++ b/relacion2/index.html
@@ -61,8 +61,8 @@
               <li class="list-group-item"><a href="./15relacion2.php" target="_blank">Ej 13 Rel 1</a></li>
               <li class="list-group-item"><a href="./16relacion2.php" target="_blank">Divisores de número entero</a></li>
               <li class="list-group-item"><a href="./17relacion2.php" target="_blank">Cociente y resto</a></li>
-              <li class="list-group-item"><a href="./18relacion2.php" target="_blank">MCM con Euclides</a></li>
-              <li class="list-group-item"><a href="./19relacion2.php" target="_blank">Conversión a binario</a></li>
+              <li class="list-group-item"><a href="./18relacion2.php" target="_blank">Conversión a binario</a></li>
+              <li class="list-group-item"><a href="./19relacion2.php" target="_blank">Conversión a bin, octal, hex</a></li>
               <li class="list-group-item"><a href="./20relacion2.php" target="_blank">Número primo (versión 2)</a></li>
             </ul>
           </div>
