--- a/relacion3/index.html
+++ b/relacion3/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ejercicios Relación 2</title>
+  <title>Ejercicios Relación 3</title>
   <link rel="shortcut icon" href="./logoPlayamar.png" type="image/x-icon" />
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -35,14 +35,15 @@
   <div class="container-fluid full-height">
     <div class="card shadow-lg mx-auto">
       <div class="card-header bg-danger text-white text-center">
-        <h1 class="mb-0">Relación de ejercicios Nº2</h1>
+        <h1 class="mb-0">Relación de ejercicios Nº3</h1>
       </div>
       <div class="card-body">
-        <p class="lead">Ejercicios prácticos con PHP y Bootstrap:</p>
+        <p class="lead">Ejercicios prácticos con PHP | FUNCIONES, RECURSIVIDAD 
+Y USO AVANZADO DE ARRAYS:</p>
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./1relacion2.php" target="_blank">Calculadora en PHP</a></li>
+              <li class="list-group-item"><a href="./1relacion3.php" target="_blank">Calculadora en PHP</a></li>
               <li class="list-group-item"><a href="./4relacion2.php" target="_blank">Estilos con clases de Bootstrap 5</a></li>
               <li class="list-group-item"><a href="./5relacion2.php" target="_blank">Tabla con estilos BS</a></li>
               <li class="list-group-item"><a href="./6relacion2.php" target="_blank">Listado personas con BS</a></li>
