--- a/relacion3/index.html
+++ b/relacion3/index.html
@@ -43,9 +43,9 @@ Y USO AVANZADO DE ARRAYS:</p>
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./1relacion3.php" target="_blank">Calculadora en PHP</a></li>
-              <li class="list-group-item"><a href="./4relacion2.php" target="_blank">Estilos con clases de Bootstrap 5</a></li>
-              <li class="list-group-item"><a href="./5relacion2.php" target="_blank">Tabla con estilos BS</a></li>
+              <li class="list-group-item"><a href="./1relacion3.php" target="_blank">Numero Primo</a></li>
+              <li class="list-group-item"><a href="./2relacion3.php" target="_blank">Factorial</a></li>
+              <li class="list-group-item"><a href="./2relacion3_recursivo.php" target="_blank">Factorial recursivo</a></li>
               <li class="list-group-item"><a href="./6relacion2.php" target="_blank">Listado personas con BS</a></li>
               <li class="list-group-item"><a href="./7relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
               <li class="list-group-item"><a href="./8relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
