--- a/relacion1/index.html
+++ b/relacion1/index.html
@@ -42,30 +42,30 @@
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="./1relacion1.php" target="_blank">Hola Mundo en PHP</a></li>
-              <li class="list-group-item"><a href="./2relacion1.php" target="_blank">Tipos de variables y formateado</a></li>
-              <li class="list-group-item"><a href="./3relacion1.php" target="_blank">Superglobals</a></li>
-              <li class="list-group-item"><a href="./4relacion1.php" target="_blank">Arrays</a></li>
-              <li class="list-group-item"><a href="./5relacion1.php" target="_blank">Array asociativo</a></li>
-              <li class="list-group-item"><a href="./6relacion1.php" target="_blank">Clase Fruta</a></li>
-              <li class="list-group-item"><a href="./7relacion1.php" target="_blank">Nota final</a></li>
-              <li class="list-group-item"><a href="./8relacion1.php" target="_blank">Nota final ponderada</a></li>
-              <li class="list-group-item"><a href="./9relacion1.php" target="_blank">Tipo de triángulo</a></li>
-              <li class="list-group-item"><a href="./10relacion1.php" target="_blank">Raíces de segundo grado</a></li>
+              <li class="list-group-item"><a href="./1relacion1.php" target="_blank">1 Hola Mundo en PHP</a></li>
+              <li class="list-group-item"><a href="./2relacion1.php" target="_blank">2 Tipos de variables y formateado</a></li>
+              <li class="list-group-item"><a href="./3relacion1.php" target="_blank">3 Superglobals</a></li>
+              <li class="list-group-item"><a href="./4relacion1.php" target="_blank">4 Arrays</a></li>
+              <li class="list-group-item"><a href="./5relacion1.php" target="_blank">5 Array asociativo</a></li>
+              <li class="list-group-item"><a href="./6relacion1.php" target="_blank">6 Clase Fruta</a></li>
+              <li class="list-group-item"><a href="./7relacion1.php" target="_blank">7 Nota final</a></li>
+              <li class="list-group-item"><a href="./8relacion1.php" target="_blank">8 Nota final ponderada</a></li>
+              <li class="list-group-item"><a href="./9relacion1.php" target="_blank">9 Tipo de triángulo</a></li>
+              <li class="list-group-item"><a href="./10relacion1.php" target="_blank">10 Raíces de segundo grado</a></li>
             </ul>
           </div>
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="./11relacion1.php" target="_blank">Raíces mejoradas</a></li>
-              <li class="list-group-item"><a href="./12relacion1.php" target="_blank">Programa nota numérica</a></li>
-              <li class="list-group-item"><a href="./13relacion1.php" target="_blank">Factorial de número natural</a></li>
-              <li class="list-group-item"><a href="./14relacion1.php" target="_blank">Suma de n números</a></li>
-              <li class="list-group-item"><a href="./15relacion1.php" target="_blank">Número primo</a></li>
-              <li class="list-group-item"><a href="./16relacion1.php" target="_blank">Divisores de número entero</a></li>
-              <li class="list-group-item"><a href="./17relacion1.php" target="_blank">Algoritmo de Euclides</a></li>
-              <li class="list-group-item"><a href="./18relacion1.php" target="_blank">MCM con Euclides</a></li>
-              <li class="list-group-item"><a href="./19relacion1.php" target="_blank">Conversión a binario</a></li>
-              <li class="list-group-item"><a href="./20relacion1.php" target="_blank">Número primo (versión 2)</a></li>
+              <li class="list-group-item"><a href="./11relacion1.php" target="_blank">11 Raíces mejoradas</a></li>
+              <li class="list-group-item"><a href="./12relacion1.php" target="_blank">12 Programa nota numérica</a></li>
+              <li class="list-group-item"><a href="./13relacion1.php" target="_blank">13 Factorial de número natural</a></li>
+              <li class="list-group-item"><a href="./14relacion1.php" target="_blank">14 Suma de n números</a></li>
+              <li class="list-group-item"><a href="./15relacion1.php" target="_blank">15 Número primo</a></li>
+              <li class="list-group-item"><a href="./16relacion1.php" target="_blank">16 Divisores de número entero</a></li>
+              <li class="list-group-item"><a href="./17relacion1.php" target="_blank">17 Algoritmo de Euclides</a></li>
+              <li class="list-group-item"><a href="./18relacion1.php" target="_blank">18 MCM con Euclides</a></li>
+              <li class="list-group-item"><a href="./19relacion1.php" target="_blank">19 Conversión a binario</a></li>
+              <li class="list-group-item"><a href="./20relacion1.php" target="_blank">20 Número primo (versión 2)</a></li>
             </ul>
           </div>
         </div>
