--- a/relacion2/index.html
+++ b/relacion2/index.html
@@ -42,28 +42,28 @@
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./1relacion2.php" target="_blank">Calculadora en PHP</a></li>
-              <li class="list-group-item"><a href="./4relacion2.php" target="_blank">Estilos con clases de Bootstrap 5</a></li>
-              <li class="list-group-item"><a href="./5relacion2.php" target="_blank">Tabla con estilos BS</a></li>
-              <li class="list-group-item"><a href="./6relacion2.php" target="_blank">Listado personas con BS</a></li>
-              <li class="list-group-item"><a href="./7relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
-              <li class="list-group-item"><a href="./8relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
-              <li class="list-group-item"><a href="./9relacion2.php" target="_blank">Calculadora con validacion</a></li>
-              <li class="list-group-item"><a href="./10relacion2.php" target="_blank">Calculadora varios archivos</a></li>
-              <li class="list-group-item"><a href="./11relacion2.php" target="_blank">Ej 7 Rel 1 - Formateo Boostrap</a></li>
+              <li class="list-group-item"><a href="./1relacion2.php" target="_blank">1 Calculadora en PHP</a></li>
+              <li class="list-group-item"><a href="./4relacion2.php" target="_blank">4 Estilos con clases de Bootstrap 5</a></li>
+              <li class="list-group-item"><a href="./5relacion2.php" target="_blank">5 Tabla con estilos BS</a></li>
+              <li class="list-group-item"><a href="./6relacion2.php" target="_blank">6 Listado personas con BS</a></li>
+              <li class="list-group-item"><a href="./7relacion2.php" target="_blank">7 Calculadora PHP con BS</a></li>
+              <li class="list-group-item"><a href="./8relacion2.php" target="_blank">8 Calculadora PHP con BS</a></li>
+              <li class="list-group-item"><a href="./9relacion2.php" target="_blank">9 Calculadora con validacion</a></li>
+              <li class="list-group-item"><a href="./10relacion2.php" target="_blank">10 Calculadora varios archivos</a></li>
+              <li class="list-group-item"><a href="./11relacion2.php" target="_blank">11 Ej 7 Rel 1 - Formateo Boostrap</a></li>
             </ul>
           </div>
           <div class="col-md-6">
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./12relacion2.php" target="_blank">Programa nota rubrica</a></li>
-              <li class="list-group-item"><a href="./13relacion2.php" target="_blank">Ej 8 Rel 1 JS</a></li>
-              <li class="list-group-item"><a href="./14relacion2.php" target="_blank">Nota con range</a></li>
-              <li class="list-group-item"><a href="./15relacion2.php" target="_blank">Ej 13 Rel 1</a></li>
-              <li class="list-group-item"><a href="./16relacion2.php" target="_blank">Divisores de número entero</a></li>
-              <li class="list-group-item"><a href="./17relacion2.php" target="_blank">Cociente y resto</a></li>
-              <li class="list-group-item"><a href="./18relacion2.php" target="_blank">Conversión a binario</a></li>
-              <li class="list-group-item"><a href="./19relacion2.php" target="_blank">Conversión a bin, octal, hex</a></li>
-              <li class="list-group-item"><a href="./20relacion2.php" target="_blank">Conversión con selecciona operacion </a></li>
+              <li class="list-group-item"><a href="./12relacion2.php" target="_blank">12 Programa nota rubrica</a></li>
+              <li class="list-group-item"><a href="./13relacion2.php" target="_blank">13 Ej 8 Rel 1 JS</a></li>
+              <li class="list-group-item"><a href="./14relacion2.php" target="_blank">14 Nota con range</a></li>
+              <li class="list-group-item"><a href="./15relacion2.php" target="_blank">15 Ej 13 Rel 1</a></li>
+              <li class="list-group-item"><a href="./16relacion2.php" target="_blank">16 Divisores de número entero</a></li>
+              <li class="list-group-item"><a href="./17relacion2.php" target="_blank">17 Cociente y resto</a></li>
+              <li class="list-group-item"><a href="./18relacion2.php" target="_blank">18 Conversión a binario</a></li>
+              <li class="list-group-item"><a href="./19relacion2.php" target="_blank">19 Conversión a bin, octal, hex</a></li>
+              <li class="list-group-item"><a href="./20relacion2.php" target="_blank">20 Conversión con selecciona operacion </a></li>
             </ul>
           </div>
         </div>
