--- a/relacion3/index.html
+++ b/relacion3/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ejercicios Relación 3</title>
   <link rel="shortcut icon" href="./logoPlayamar.png" type="image/x-icon" />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-    crossorigin="anonymous"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
   <style>
-    html, body {
+    html,
+    body {
       height: 100%;
       margin: 0;
     }
+
     .full-height {
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
     }
+
     .card {
       width: 100%;
       max-width: 900px;
     }
+
     .list-group-item a {
       text-decoration: none;
     }
   </style>
 </head>
+
 <body class="bg-info-subtle">
   <div class="container-fluid full-height">
     <div class="card shadow-lg mx-auto">
@@ -38,33 +40,44 @@
         <h1 class="mb-0">Relación de ejercicios Nº3</h1>
       </div>
       <div class="card-body">
-        <p class="lead">Ejercicios prácticos con PHP | FUNCIONES, RECURSIVIDAD 
-Y USO AVANZADO DE ARRAYS:</p>
+        <p class="lead">Ejercicios prácticos con PHP | FUNCIONES, RECURSIVIDAD
+          Y USO AVANZADO DE ARRAYS:</p>
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./1relacion3.php" target="_blank">Numero Primo</a></li>
-              <li class="list-group-item"><a href="./2relacion3.php" target="_blank">Factorial</a></li>
-              <li class="list-group-item"><a href="./2relacion3_recursivo.php" target="_blank">Factorial recursivo</a></li>
-              <li class="list-group-item"><a href="./6relacion2.php" target="_blank">Listado personas con BS</a></li>
-              <li class="list-group-item"><a href="./7relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
-              <li class="list-group-item"><a href="./8relacion2.php" target="_blank">Calculadora PHP con BS</a></li>
-              <li class="list-group-item"><a href="./9relacion2.php" target="_blank">Calculadora con validacion</a></li>
-              <li class="list-group-item"><a href="./10relacion2.php" target="_blank">Calculadora varios archivos</a></li>
-              <li class="list-group-item"><a href="./11relacion2.php" target="_blank">Ej 7 Rel 1 - Formateo Boostrap</a></li>
+              <li class="list-group-item"><a href="./1relacion3.php" target="_blank">1 Numero Primo</a></li>
+              <li class="list-group-item"><a href="./2relacion3.php" target="_blank">2 Factorial</a></li>
+              <li class="list-group-item"><a href="./2relacion3_recursivo.php" target="_blank">2 Factorial recursivo</a>
+              </li>
+              <li class="list-group-item"><a href="./3relacion3.php" target="_blank">3 Funcion MCD</a></li>
+              <li class="list-group-item"><a href="./4relacion3.php" target="_blank">4 Libreria</a></li>
+              <li class="list-group-item"><a href="./5relacion3.php" target="_blank">5 Ejer 12 vadil email, tipo de doc
+                  identidad</a></li>
+              <li class="list-group-item"><a href="./6relacion3.php" target="_blank">6 Tirada dados</a></li>
+              <li class="list-group-item"><a href="./7relacion3.php" target="_blank">7 Funciones Fecha / Hora</a></li>
+              <li class="list-group-item"><a href="./8relacion3.php" target="_blank">8 Texto muestra en minus y/o
+                  mayus</a></li>
+              <li class="list-group-item"><a href="./8relacion3_2parte.php" target="_blank">8 Texto muestra en minus o
+                  mayus</a></li>
+              <li class="list-group-item"><a href="./9relacion3.php" target="_blank">9 Texto form muestra palabra mas
+                  larga</a></li>
             </ul>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" 3>
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./12relacion2.php" target="_blank">Programa nota rubrica</a></li>
-              <li class="list-group-item"><a href="./13relacion2.php" target="_blank">Ej 8 Rel 1 JS</a></li>
-              <li class="list-group-item"><a href="./14relacion2.php" target="_blank">Nota con range</a></li>
-              <li class="list-group-item"><a href="./15relacion2.php" target="_blank">Ej 13 Rel 1</a></li>
-              <li class="list-group-item"><a href="./16relacion2.php" target="_blank">Divisores de número entero</a></li>
-              <li class="list-group-item"><a href="./17relacion2.php" target="_blank">Cociente y resto</a></li>
-              <li class="list-group-item"><a href="./18relacion2.php" target="_blank">Conversión a binario</a></li>
-              <li class="list-group-item"><a href="./19relacion2.php" target="_blank">Conversión a bin, octal, hex</a></li>
-              <li class="list-group-item"><a href="./20relacion2.php" target="_blank">Conversión con selecciona operacion </a></li>
+
+              <li class="list-group-item"><a href="./10relacion3.php" target="_blank">10 Script texto inverso</a></li>
+              <li class="list-group-item"><a href="./11relacion3.php" target="_blank">11</a></li>
+              <li class="list-group-item"><a href="./12relacion3.php" target="_blank">12</a></li>
+              <li class="list-group-item"><a href="./13relacion3.php" target="_blank">13</a></li>
+              <li class="list-group-item"><a href="./14relacion3.php" target="_blank">14</a></li>
+              <li class="list-group-item"><a href="./15relacion3.php" target="_blank">15</a></li>
+              <li class="list-group-item"><a href="./16relacion3.php" target="_blank">16</a></li>
+              <li class="list-group-item"><a href="./17relacion3.php" target="_blank">17</a></li>
+              <li class="list-group-item"><a href="./18relacion3.php" target="_blank">18</a></li>
+              <li class="list-group-item"><a href="./19relacion3.php" target="_blank">19</a></li>
+              <li class="list-group-item"><a href="./20relacion3.php" target="_blank">20</a></li>
+
             </ul>
           </div>
         </div>
@@ -75,4 +88,5 @@ Y USO AVANZADO DE ARRAYS:</p>
     </div>
   </div>
 </body>
+
 </html>
