--- a/relacion2/index.html
+++ b/relacion2/index.html
@@ -49,14 +49,14 @@
               <li class="list-group-item"><a href="./7relacion2.php" target="_blank">7 Calculadora PHP con BS</a></li>
               <li class="list-group-item"><a href="./8relacion2.php" target="_blank">8 Calculadora PHP con BS</a></li>
               <li class="list-group-item"><a href="./9relacion2.php" target="_blank">9 Calculadora con validacion</a></li>
-              <li class="list-group-item"><a href="./10relacion2.php" target="_blank">10 Calculadora varios archivos</a></li>
-              <li class="list-group-item"><a href="./11relacion2.php" target="_blank">11 Ej 7 Rel 1 - Formateo Boostrap</a></li>
+              <li class="list-group-item"><a href="./10relacion2/10relacion2.php" target="_blank">10 Calculadora varios archivos</a></li>
+              <li class="list-group-item"><a href="./11relacion2/11relacion2.php" target="_blank">11 Ej 7 Rel 1 - Formateo Boostrap</a></li>
             </ul>
           </div>
           <div class="col-md-6">
             <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><a href="./12relacion2.php" target="_blank">12 Programa nota rubrica</a></li>
-              <li class="list-group-item"><a href="./13relacion2.php" target="_blank">13 Ej 8 Rel 1 JS</a></li>
+              <li class="list-group-item"><a href="./12relacion2/12relacion2.php" target="_blank">12 Programa nota rubrica</a></li>
+              <li class="list-group-item"><a href="./13relacion2/13relacion2.php" target="_blank">13 Ej 8 Rel 1 JS</a></li>
               <li class="list-group-item"><a href="./14relacion2.php" target="_blank">14 Nota con range</a></li>
               <li class="list-group-item"><a href="./15relacion2.php" target="_blank">15 Ej 13 Rel 1</a></li>
               <li class="list-group-item"><a href="./16relacion2.php" target="_blank">16 Divisores de número entero</a></li>
