--- a/relacion3/index.html
+++ b/relacion3/index.html
@@ -51,10 +51,10 @@
               </li>
               <li class="list-group-item"><a href="./3relacion3.php" target="_blank">3 Funcion MCD</a></li>
               <li class="list-group-item"><a href="./4relacion3.php" target="_blank">4 Libreria</a></li>
-              <li class="list-group-item"><a href="./5relacion3.php" target="_blank">5 Ejer 12 vadil email, tipo de doc
+              <li class="list-group-item"><a href="./5relacion3/5relacion3.php" target="_blank">5 Ejer 12 vadil email, tipo de doc
                   identidad</a></li>
               <li class="list-group-item"><a href="./6relacion3.php" target="_blank">6 Tirada dados</a></li>
-              <li class="list-group-item"><a href="./7relacion3.php" target="_blank">7 Funciones Fecha / Hora</a></li>
+              <li class="list-group-item"><a href="./" target="_blank">7 Funciones Fecha / Hora</a></li>
               <li class="list-group-item"><a href="./8relacion3.php" target="_blank">8 Texto muestra en minus y/o
                   mayus</a></li>
               <li class="list-group-item"><a href="./8relacion3_2parte.php" target="_blank">8 Texto muestra en minus o
@@ -67,16 +67,16 @@
             <ul class="list-group list-group-flush text-center">
 
               <li class="list-group-item"><a href="./10relacion3.php" target="_blank">10 Script texto inverso</a></li>
-              <li class="list-group-item"><a href="./11relacion3.php" target="_blank">11</a></li>
-              <li class="list-group-item"><a href="./12relacion3.php" target="_blank">12</a></li>
-              <li class="list-group-item"><a href="./13relacion3.php" target="_blank">13</a></li>
-              <li class="list-group-item"><a href="./14relacion3.php" target="_blank">14</a></li>
-              <li class="list-group-item"><a href="./15relacion3.php" target="_blank">15</a></li>
-              <li class="list-group-item"><a href="./16relacion3.php" target="_blank">16</a></li>
-              <li class="list-group-item"><a href="./17relacion3.php" target="_blank">17</a></li>
-              <li class="list-group-item"><a href="./18relacion3.php" target="_blank">18</a></li>
-              <li class="list-group-item"><a href="./19relacion3.php" target="_blank">19</a></li>
-              <li class="list-group-item"><a href="./20relacion3.php" target="_blank">20</a></li>
+              <li class="list-group-item"><a href="./11relacion3.php" target="_blank">11 Funcion swap</a></li>
+              <li class="list-group-item"><a href="./12relacion3.php" target="_blank">12 Ordena array</a></li>
+              <li class="list-group-item"><a href="./13relacion3.php" target="_blank">13 Manejo de Strings</a></li>
+              <li class="list-group-item"><a href="./14relacion3.php" target="_blank">14 Funciones anonimas</a></li>
+              <li class="list-group-item"><a href="./15relacion3.php" target="_blank">15 Funciones flecha</a></li>
+              <li class="list-group-item"><a href="./16relacion3.php" target="_blank">16 Callbacks</a></li>
+              <li class="list-group-item"><a href="./17relacion3.php" target="_blank">17 Prueba funciones</a></li>
+              <li class="list-group-item"><a href="./18relacion3.php" target="_blank">18 Carta de platos</a></li>
+              <li class="list-group-item"><a href="./19relacion3.php" target="_blank">19 Menu trucado</a></li>
+              <li class="list-group-item"><a href="./20relacion3.php" target="_blank">20 Controles de seguridad</a></li>
 
             </ul>
           </div>
