--- a/relacion3/index.html
+++ b/relacion3/index.html
@@ -57,7 +57,7 @@
               <li class="list-group-item"><a href="./" target="_blank">7 Funciones Fecha / Hora</a></li>
               <li class="list-group-item"><a href="./8relacion3.php" target="_blank">8 Texto muestra en minus y/o
                   mayus</a></li>
-              <li class="list-group-item"><a href="./8relacion3_2parte.php" target="_blank">8 Texto muestra en minus o
+              <li class="list-group-item"><a href="./8-2relacion3.php" target="_blank">8 Texto muestra en minus o
                   mayus</a></li>
               <li class="list-group-item"><a href="./9relacion3.php" target="_blank">9 Texto form muestra palabra mas
                   larga</a></li>
